--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:8-jdk
+ARG JARFILE
 RUN useradd -ms /bin/bash ericka
 USER ericka
 WORKDIR /home/ericka
-ADD test-0.0.1-SNAPSHOT.jar /home/ericka
-ENTRYPOINT ["java","-jar", "test-0.0.1-SNAPSHOT.jar"]
+ADD $JARFILE /home/ericka/application.jar
+ENTRYPOINT ["java","-jar", "application.jar"]
